in-progress: ConversationService

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -17,3 +17,6 @@ jwt:
   refresh:
     duration: 3600
   secret: my-super-strong-powerful-charming-and-lovely-secret-1DW*(#$Pf42fDS23
+
+app:
+  message-modifiability-duration: 5
