--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "tailwindcss": "^3.3.3"
+    "react-router-dom": "6",
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "tailwindcss": "^3.3.3",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
